# chorim

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  coverage.xml  deploy.py  index.html  pyproject.toml  test_deploy.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  docs.yml  site.yml
chorim/: __init__.py  index.tpl
chorim/js/: app.js
js/: MP3Player.js
lilypond/: bache.ly  carmina.ly  couplets_des_rois.ly  dubim.ly  somewhere.ly  toreador.ly  traviata.ly
styles/: main.css  player.css  responsive.css
