[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chorim"
version = "0.1.0"
description = "Répertoire Github transcriptions basses du Choeur d'Issy-les-Moulineaux (fichiers sources lilypond)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
maintainers = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
license = "MIT"
keywords = ["lilypond", "music", "choir", "midi", "mp3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ffmpeg-normalize>=1.35.0",
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/balouf/chorim"
Documentation = "https://balouf.github.io/chorim"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["chorim"]

[tool.coverage.html]
directory = "cov"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov --cov-config=pyproject.toml --cov-report xml --cov-report html --showlocals --capture=no --exitfirst --failed-first" 
